lots of things + new project release!

--- a/index.html
+++ b/index.html
@@ -2,17 +2,35 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>~blasy</title>
+    <title>~blazy</title>
     <link rel="stylesheet" href="resources/stylesheet.css">
 </head>
 <body>
-<div id="section">
-    <h1>blazy's landing page</h1>
-    <h2>beginner HTML, CSS & JS developer</h2>
-    <h3>
-        <a href="https://github.com/suffocating111">Github</a> |
-        <a href="https://open.spotify.com/user/szvla2137">Spotify</a> |
-        <a href="https://soundcloud.com/blazyy">Soundcloud</a></h3>
+<div class="container">
+    <div class="section">
+        <div class="main">
+            <h1>blazy's landing page</h1><br/>
+            <h2>beginner HTML, CSS & JS developer</h2><br/>
+            <h3>
+                <a href="https://github.com/suffocating111">Github</a> |
+                <a href="https://open.spotify.com/user/szvla2137">Spotify</a> |
+                <a href="https://soundcloud.com/blazyy">Soundcloud</a>
+            </h3>
+        </div>
+    </div>
+    <div class="section">
+        <div class="projects">
+            <h1>My projects</h1>
+                <div class="zulsorter">
+                    <p><a href="zulsorter.html">zul-sorter</a></p>
+                    <p>small project to sort dosser name's alphabetically and uppercase them.
+                </div>
+                <div class="thisPage">
+                    <p><a href="https://github.com/suffocating111/suffocating111.github.io">this website</a></p>
+                    <p>we keep it simple, right? simple, beautiful, HTML, CSS, JS, and some more dictionary words</p>
+                </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
