--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>~blazy</title>
-    <link rel="stylesheet" href="resources/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 <div class="container">
