--- a/zulsorter.html
+++ b/zulsorter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>~blazy - zulpicker</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="resources/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="section">
         <div class="border">
             <div class="script">
-                <script src="resources/script.js"></script>
+                <script src="script.js"></script>
             </div>
         </div>
     </div>
