--- a/zulsorter.html
+++ b/zulsorter.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>~blazy - zulpicker</title>
+    <title>~blazy => zul-sorter</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
