aesthetical changes, code optimization, bla bla bla everything working now

--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
                 </div>
                 <div class="thisPage">
                     <p><a href="https://github.com/suffocating111/suffocating111.github.io">this website</a></p>
-                    <p>we keep it simple, right? simple, beautiful, HTML, CSS, JS, and some more dictionary words</p>
+                    <p>we keep it simple, right? beautiful, HTML, CSS, JS, and some more dictionary words.</p>
                 </div>
         </div>
     </div>
+    <div class="section">
+        <div class="contact">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaCwvDSvJGdDNYHcjMuNGEGuasO15VAltOu7-lbVTJ6yqZeg/viewform?embedded=true" width="640" height="640" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Ładuję…</iframe>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
