--- a/zulsorter.html
+++ b/zulsorter.html
@@ -21,6 +21,7 @@
     <div class="section">
         <div class="border">
             <div class="script">
+                <h1>Choose your fighter</h1>
                 <script src="script.js"></script>
             </div>
         </div>
