--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>~blazy</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
@@ -33,7 +34,7 @@
     </div>
     <div class="section">
         <div class="contact">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaCwvDSvJGdDNYHcjMuNGEGuasO15VAltOu7-lbVTJ6yqZeg/viewform?embedded=true" width="640" height="640" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Ładuję…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaCwvDSvJGdDNYHcjMuNGEGuasO15VAltOu7-lbVTJ6yqZeg/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Ładuję…</iframe>
         </div>
     </div>
 
