--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1>blazy's landing page</h1><br/>
             <h2>beginner HTML, CSS & JS developer</h2><br/>
             <h3>
-                <a href="https://github.com/suffocating111">Github</a> |
-                <a href="https://open.spotify.com/user/szvla2137">Spotify</a> |
-                <a href="https://soundcloud.com/blazyy">Soundcloud</a>
+                <a href="https://github.com/suffocating111" target="_blank">Github</a> |
+                <a href="https://open.spotify.com/user/szvla2137" target="_blank">Spotify</a> |
+                <a href="https://soundcloud.com/blazyy" target="_blank">Soundcloud</a>
             </h3>
         </div>
     </div>
@@ -23,18 +23,18 @@
         <div class="projects">
             <h1>My projects</h1>
                 <div class="zulsorter">
-                    <p><a href="zulsorter.html">zul-sorter</a></p>
+                    <p><a href="zulsorter.html" target="_blank">zul-sorter</a></p>
                     <p>small project to sort dosser name's alphabetically and uppercase them.
                 </div>
                 <div class="thisPage">
-                    <p><a href="https://github.com/suffocating111/suffocating111.github.io">this website</a></p>
+                    <p><a href="https://github.com/suffocating111/suffocating111.github.io" target="_blank">this website</a></p>
                     <p>we keep it simple, right? beautiful, HTML, CSS, JS, and some more dictionary words.</p>
                 </div>
         </div>
     </div>
     <div class="section">
         <div class="contact">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaCwvDSvJGdDNYHcjMuNGEGuasO15VAltOu7-lbVTJ6yqZeg/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Ładuję…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdaCwvDSvJGdDNYHcjMuNGEGuasO15VAltOu7-lbVTJ6yqZeg/viewform?embedded=true" style="width: 80vw; height: 100vh" frameborder="0" marginheight="0" marginwidth="0">Ładuję…</iframe>
         </div>
     </div>
 
